// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render normally 1`] = `
<Text
  allowFontScaling={false}
  style={
    Object {
      "transform": Array [
        Object {
          "scale": 1,
        },
      ],
    }
  }
>
  ★
</Text>
`;

exports[`should render with custom style 1`] = `
<Text
  allowFontScaling={false}
  style={
    Object {
      "color": "blue",
      "transform": Array [
        Object {
          "scale": 1,
        },
      ],
    }
  }
>
  ★
</Text>
`;
